--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/MPL_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Match Point League - Premier tennis and pickleball leagues in Baltimore. Join our community for competitive play, tournaments, and lasting friendships." />
+    <meta name="keywords" content="tennis, pickleball, league, Baltimore, tournaments, community, sports" />
+    <title>Match Point League - Tennis & Pickleball in Baltimore</title>
   </head>
   <body>
     <div id="root"></div>
